test/classes/initializers/generics/explicitAssignment.good
explicitAssignment.chpl:17: In function 'main':
explicitAssignment.chpl:18: error: Cannot assign to borrowed Foo(real(64)) from borrowed Foo(int(64))
